Propertyを再ビルド
git-svn-id: file:///opt/svn/repository/projects/trunk@417 425babaa-d5dd-46a5-afc5-8c713db7da9f